--- a/index.html
+++ b/index.html
@@ -1,169 +1,269 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <title>Curso Desarrollo Web desde Cero</title>
+    <meta
+      name="description"
+      content="En este curso aprenderemos a desarrollar sitios web desde cero, utilizando HTML5, CSS3, Javascript y Git/Github."
+    />
+    <link rel="shortcut icon" href="images/iso.png" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Curso Desarrollo Web desde cero | Escalab Academy</title>
-    <meta name="description" content="En este curso realizaremos un landing page con HMTL5, CSS3 y Prepros." />
-    <link rel="shortcut icon" href="images/iso.png">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize-dist.css">
-    <link rel="stylesheet" href="css/style-dist.css">
-</head>
-
-<body>
-
-    <!-- Open Header -->
+  <body>
+    <!-- Header -->
     <header class="header-home">
-        <!-- Open Menu -->
-        <nav class="main-menu">
-            <a class="logotipo" href="http://"><img src="images/logotipo.svg" alt="Escalab Academy Branding"></a>
-            <!-- Menu Desktop -->
-            <ul class="menu-link-desktop">
-                <li>
-                    <a class="links-menu" href="http://">Inicio</a>
-                </li>
-                <li>
-                    <a class="links-menu" href="http://">Servicios</a>
-                </li>
-                <li>
-                    <a class="links-menu" href="http://">Beneficios</a>
-                </li>
-                <li>
-                    <a class="links-menu cta-btn" href="http://">Cotizar</a>
-                </li>
-            </ul>
-            <!-- Menu Mobile -->
-            <ul class="menu-link-mobile">
-                <li><a class="links-menu" href="">Home</a></li>
-                <li><a class="links-menu" href="">Servicios</a></li>
-                <li><a class="links-menu" href="">Beneficios</a></li>
-                <li><a class="links-menu cta-btn" href="">Cotizar</a></li>
-            </ul>
-        </nav>
-        <!-- End Menu -->
+      <!-- Menu -->
+      <nav class="main-menu">
+        <a class="logotipo" href="index.html" target="_blank"
+          ><img src="images/logotipo.svg" alt="Logotipo"
+        /></a>
+        <ul class="menu-link-desktop">
+          <li><a class="links-menu" href="">Home</a></li>
+          <li><a class="links-menu" href="">Servicios</a></li>
+          <li><a class="links-menu" href="">Beneficios</a></li>
+          <li><a class="links-menu cta-btn" href="">Cotizar</a></li>
+        </ul>
+        <ul class="menu-link-mobile">
+          <li><a class="links-menu" href="">Home</a></li>
+          <li><a class="links-menu" href="">Servicios</a></li>
+          <li><a class="links-menu" href="">Beneficios</a></li>
+          <li><a class="links-menu cta-btn" href="">Cotizar</a></li>
+        </ul>
+      </nav>
+      <!-- Hero -->
+      <section class="hero container">
+        <hgroup>
+          <h1 class="title-hero">
+            <span class="first-title">Escalab Academy</span> Curso Desarrollo
+            Web
+          </h1>
+          <h3 class="description-hero">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum. Lorem Ipsum is simply dummy text of the
+            printing and typesetting industry.
+          </h3>
+          <a class="btns btn-hero" href="http://" target="_blank"
+            >Ver todos los servicios</a
+          >
+        </hgroup>
+        <figure>
+          <img
+            class="image-hero img-responsive"
+            src="images/img-header.svg"
+            alt="Aprende desarrollo Web en Escalab Academy"
+          />
+        </figure>
+      </section>
     </header>
-    <!-- End Header -->
-
-    <!-- Open Hero -->
-    <section class="hero">
-        <div class="container">
-            <hgroup>
-                <h1 class="title-hero"><span class="first-title">Escalab Academy</span>Curso Desarrollo Web</h1>
-                <h3 class="description-hero">Lorem ipsum dolor sit amet consectetur adipiscing elit, rhoncus fusce nam feugiat massa tellus euismod, lobortis tortor class in ut inceptos. Ridiculus viverra dapibus.</h3>
-                <a class="btns btn-hero" href="http://" target="_blank">Ver servicios</a>
-            </hgroup>
-            <figure>
-                <img class="image-hero img-responsive" src="images/img-header.svg" alt="Aprende desarrollo Web en Escalab Academy">
-            </figure>
-        </div>
-    </section>
-    <!-- End Hero -->
-
-    <!-- End Main -->
+    <!-- Contenido -->
     <main>
-        <!-- Open Servicios -->
-        <section class="section-page section-services">
-            <h2 class="title-section">Servicios</h2>
-            <div class="container">
-                <article class="box-services">
-                    <figure class="box-image-services"><img class="img-responsive" src="images/img-services-1.svg" alt="Servicios páginas web con HTML5"></figure>
-                    <h3 class="title-services">HTML5</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed obcaecati quis non? Quaerat aliquid corporis.</p>
-                </article>
-                <article class="box-services">
-                    <figure class="box-image-services"><img class="img-responsive" src="images/img-services-2.svg" alt="Servicios páginas web con HTML5"></figure>
-                    <h3 class="title-services">CSS3</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed obcaecati quis non? Quaerat aliquid corporis.</p>
-                </article>
-                <article class="box-services">
-                    <figure class="box-image-services"><img class="img-responsive" src="images/img-services-3.svg" alt="Servicios páginas web con HTML5"></figure>
-                    <h3 class="title-services">JAVASCRIPT</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed obcaecati quis non? Quaerat aliquid corporis.</p>
-                </article>
-                <article class="box-services">
-                    <figure class="box-image-services"><img class="img-responsive" src="images/img-services-4.svg" alt="Servicios páginas web con HTML5"></figure>
-                    <h3 class="title-services">GIT/GITHUB</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed obcaecati quis non? Quaerat aliquid corporis.</p>
-                </article>
-            </div>
-        </section>
-        <!-- End Servicios -->
-
-        <!-- Open Beneficios -->
-        <section class="section-page section-benefits">
-            <div class="container">
-                <h2 class="title-section">Beneficios</h2>
-                <div class="cont-benefits">
-                    <article class="box-benefits">
-                        <figure><img class="icon-benefits" src="images/img-benefits-1.svg" alt=""></figure>
-                        <div>
-                            <h3>Escala tus conocimientos</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum.</p>
-                        </div>
-                    </article>
-                    <article class="box-benefits">
-                        <figure><img class="icon-benefits" src="images/img-benefits-2.svg" alt=""></figure>
-                        <div>
-                            <h3>Escala tus conocimientos</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum.</p>
-                        </div>
-                    </article>
-                    <article class="box-benefits">
-                        <figure><img class="icon-benefits" src="images/img-benefits-3.svg" alt=""></figure>
-                        <div>
-                            <h3>Escala tus conocimientos</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum.</p>
-                        </div>
-                    </article>
-                </div>
-            </div>
-            <figure class="box-image-benefits">
-                <img class="img-responsive" src="images/img-benefits.svg" alt="">
+      <!-- Servicios -->
+      <section class="section-page section-services">
+        <h1 class="title-section">Servicios</h1>
+        <div class="container">
+          <article class="box-services">
+            <figure class="box-image-services">
+              <img
+                class="img-responsive"
+                src="images/img-services-1.svg"
+                alt=""
+              />
             </figure>
-        </section>
-        <!-- End Beneficios -->
-
-        <!-- Open Contacto -->
-        <section class="section-page section-contact">
-            <h2 class="title-section">Cotizar</h2>
-            <form id="formulario-contacto" action="" class="form-landing-page" method="post">
-                <ul id="errors"></ul>
-                <div class="input-field">
-                    <input class="input-form" type="text" name="name_contact" required placeholder="Nombre y apellido">
-                </div>
-                <div class="input-field">
-                    <input class="input-form" type="email" name="email_contact" required placeholder="Ingresa tu email">
-                </div>
-                <div class="input-field">
-                    <input class="input-form" type="number" name="phone_contact" required placeholder="Ingresa tu teléfono">
-                </div>
-                <div class="input-field">
-                    <select id="topic_contact" class="select-form" required>
-                        <option value="html5">HTML5</option>
-                        <option value="css3">CSS3</option>
-                        <option value="javascript">Javascript</option>
-                        <option value="github">Git/Github</option>
-                  </select>
-                </div>
-                <div class="input-field">
-                    <textarea class="textarea-form" name="commit_contact" cols="30" rows="10" placeholder="Déjanos tus comentarios..." minlength="10" maxlength="200"></textarea>
-                </div>
-                <button class="btns btn-enviar" type="submit" value="submit" name="btn_enviar">Enviar y cotizar</button>
-            </form>
-        </section>
-        <!-- End Contacto -->
+            <h3 class="title-services">Servicios</h3>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum.
+            </p>
+          </article>
+          <article class="box-services">
+            <figure class="box-image-services">
+              <img
+                class="img-responsive"
+                src="images/img-services-2.svg"
+                alt=""
+              />
+            </figure>
+            <h3 class="title-services">Servicios</h3>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum.
+            </p>
+          </article>
+          <article class="box-services">
+            <figure class="box-image-services">
+              <img
+                class="img-responsive"
+                src="images/img-services-3.svg"
+                alt=""
+              />
+            </figure>
+            <h3 class="title-services">Servicios</h3>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum.
+            </p>
+          </article>
+          <article class="box-services">
+            <figure class="box-image-services">
+              <img
+                class="img-responsive"
+                src="images/img-services-4.svg"
+                alt=""
+              />
+            </figure>
+            <h3 class="title-services">Servicios</h3>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum.
+            </p>
+          </article>
+        </div>
+      </section>
+      <!-- Beneficios -->
+      <section class="section-page section-benefits">
+        <div class="container">
+          <h1 class="title-section">Beneficios</h1>
+          <div class="cont-benefits">
+            <article class="box-benefits">
+              <figure>
+                <img
+                  class="icon-benefits"
+                  src="images/img-benefits-1.svg"
+                  alt=""
+                />
+              </figure>
+              <div>
+                <h3>Escala tus conocimientos</h3>
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum.
+                </p>
+              </div>
+            </article>
+            <article class="box-benefits">
+              <figure>
+                <img
+                  class="icon-benefits"
+                  src="images/img-benefits-2.svg"
+                  alt=""
+                />
+              </figure>
+              <div>
+                <h3>Escala tus conocimientos</h3>
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum.
+                </p>
+              </div>
+            </article>
+            <article class="box-benefits">
+              <figure>
+                <img
+                  class="icon-benefits"
+                  src="images/img-benefits-3.svg"
+                  alt=""
+                />
+              </figure>
+              <div>
+                <h3>Escala tus conocimientos</h3>
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum.
+                </p>
+              </div>
+            </article>
+          </div>
+        </div>
+        <figure class="box-image-benefits">
+          <img class="img-responsive" src="images/img-benefits.svg" alt="" />
+        </figure>
+      </section>
+      <!-- Contacto -->
+      <section class="section-page section-contact">
+        <h1 class="title-section">Cotizar</h1>
+        <form
+          id="formulario-contacto"
+          action=""
+          class="form-landing-page"
+          method="post"
+        >
+          <ul id="errors"></ul>
+          <div class="input-field">
+            <input
+              class="input-form"
+              type="text"
+              name="name_contact"
+              required
+              autocomplete="on"
+              placeholder="Ingresa tu nombre y apellido..."
+            />
+          </div>
+          <div class="input-field">
+            <input
+              class="input-form"
+              type="email"
+              name="email_contact"
+              required
+              autocomplete="on"
+              placeholder="Ingresa tu correo..."
+            />
+          </div>
+          <div class="input-field">
+            <input
+              class="input-form"
+              type="number"
+              name="phone_contact"
+              required
+              autocomplete="on"
+              placeholder="Ingresa tu teléfono..."
+            />
+          </div>
+          <div class="input-field">
+            <select id="topic_contact" class="select-form" required>
+              <option value="html5">HTML5</option>
+              <option value="css3">CSS3</option>
+              <option value="javascript">Javascript</option>
+              <option value="git">Git/Github</option>
+            </select>
+          </div>
+          <div class="input-field">
+            <textarea
+              class="textarea-form"
+              name="commit_contact"
+              cols="30"
+              rows="10"
+              placeholder="Déjanos tu comentario..."
+              minlength="10"
+              maxlength="200"
+            ></textarea>
+          </div>
+          <button class="btns btn-enviar" type="submit" value="submit">
+            Enviar y cotizar
+          </button>
+        </form>
+      </section>
     </main>
-    <!-- Open Footer -->
+    <!-- Footer -->
     <footer class="footer">
-        <h6 class="copy">Diseñado y Desarrollado por <a href="http://linkedin.com/in/cesaravilesc/" target="_blank">César Avilés - CEO & Founder at Escalab Academy</a> - Copyright 2022</h6>
+      <h6 class="copy">
+        Diseñado y Desarrollador por
+        <a href="http://linkedin.com/in/cesaravilesc/" target="_blank"
+          >César Avilés C. / CEO-Founder • Escalab Academy</a
+        >
+        - Copyright 2021.
+      </h6>
     </footer>
-    <!-- End Footer -->
-
     <script src="js/index.js"></script>
-    <!-- HTML5 DESDE CERO | César Avilés | https://github.com/grafiaviles/master-class-escalab-landing-page -->
 </body>
-
 </html>
